@@ -4,7 +4,7 @@ most recent and also the current. Within each section, style and chronological o
 -----------------------------------------------------------------------------------------------------------------------------------------------------------------------------
  (A) Current branch 
 -----------------------------------------------------------------------------------------------------------------------------------------------------------------------------
-077-recal_calibs: run the new recalibrated versions 
+078-euler_errors: compute Euler equation errors during simulation 
 
 -----------------------------------------------------------------------------------------------------------------------------------------------------------------------------
  (B) Version history (August 2011 - October 2012) reverse chronological order
@@ -616,3 +616,4 @@ For example, simvars should read and write output unformatted also, see  subrout
 074-minor_improvements: save results so that Matlab can always read (see errors in shell_output.txt). calculate Medians and report them in equilibrium_long.
 075-noIR_sharpe: this calibration is not yet implemented (need to calibrate beta)
 076-correct_mean_shock: in mean shock, return the policies and values and most importantly Phi that are not interpolated with nx_factor (which in meanshock differs from the on in params_mod).
+077-recal_calibs: run the new recalibrated versions. Only partially completed, to be continued.
